clean up code in ConfigManager
* replace System.out statements by logger statements
* remove code duplication at line 30
* simplify usage of new String()
* replace Exception in catch statement by the actual exceptions that could be thrown